--- a/owncloudApp/src/main/res/values-sv/strings.xml
+++ b/owncloudApp/src/main/res/values-sv/strings.xml
@@ -389,6 +389,7 @@
   <string name="share_via_link_expiration_date_label">Upphör</string>
   <string name="share_via_link_password_label">Lösenord</string>
   <string name="share_via_link_password_title">Säkrad</string>
+  <string name="share_via_link_edit_permission_read_only_label">Ladda ner / Granska</string>
   <string name="share_get_public_link_button">Hämta länk</string>
   <string name="share_with_title">Delad med</string>
   <string name="share_with_edit_title">Dela med %1$s</string>
