--- a/owncloudApp/src/main/res/values-gl/strings.xml
+++ b/owncloudApp/src/main/res/values-gl/strings.xml
@@ -401,6 +401,7 @@ Descárgueo de aquí: %2$s</string>
   <string name="drawer_manage_accounts">Xestionar as contas</string>
   <string name="auth_redirect_non_secure_connection_title">A conexión segura está a ser redirixida a través dunha ruta non segura.</string>
   <string name="actionbar_logger">Rexistros</string>
+  <string name="log_open_logs_view">Abrir o visor de rexistros</string>
   <string name="log_send_history_button">Enviar o historial</string>
   <string name="log_send_no_mail_app">Non se atopou unha aplicación para enviar os rexistros. Instale unha aplicación de correo!</string>
   <string name="log_send_mail_subject">Rexistros da aplicación %1$s Android</string>
@@ -560,4 +561,6 @@ Descárgueo de aquí: %2$s</string>
   <string name="common_not_found">non foi atopado</string>
   <string name="supports_oauth2_error">Non foi posible saber se OAuth2 é compatíbel</string>
   <string name="get_base_url_error">Non foi posíbel saber cal é o URL base do servidor</string>
+  <string name="prefs_http_logs">Rexistro de solicitudes e respostas HTTP</string>
+  <string name="prefs_logs_summary">Os rexistros poden incluír información confidencial. Compartir rexistros con outras persoas é responsabilidade exclusiva do usuario</string>
 </resources>
