[tx] updated from transifex

--- a/owncloudApp/src/main/res/values-he/strings.xml
+++ b/owncloudApp/src/main/res/values-he/strings.xml
@@ -400,6 +400,7 @@
   <string name="drawer_manage_accounts">ניהול חשבונות</string>
   <string name="auth_redirect_non_secure_connection_title">חיבור מאובטח מנותב דרך נתיב לא מאובטח</string>
   <string name="actionbar_logger">לוגים</string>
+  <string name="log_open_logs_view">פתיחת תצוגת לוגים</string>
   <string name="log_send_history_button">הסטורית שליחה</string>
   <string name="log_send_no_mail_app">לא נמצא יישום לשליחת לוגים. יש להתקין יישום mail.</string>
   <string name="log_send_mail_subject">%1$s לוגים של יישום אנדרואיד</string>
@@ -561,4 +562,6 @@
   <string name="common_not_found">לא נמצא</string>
   <string name="supports_oauth2_error">לא ניתן היה לדעת אם OAuth2 נתמך</string>
   <string name="get_base_url_error">לא ניתן היה לדעת את נתיב הבסיס של השרת</string>
+  <string name="prefs_http_logs">תיעוד בקשות ותגובות HTTP</string>
+  <string name="prefs_logs_summary">לוגים עלולים להכיל מידע רגיש. שיתוף לוגים עם אחרים הנו באחריות היחידה של המשתמש</string>
 </resources>
