--- a/owncloudApp/src/main/res/values-bg-rBG/strings.xml
+++ b/owncloudApp/src/main/res/values-bg-rBG/strings.xml
@@ -1,5 +1,9 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <!--GLOBAL-->
+  <string name="global_name">Име</string>
+  <string name="global_date">Дата</string>
+  <string name="global_size">Размер</string>
   <string name="about_android">%1$sза Android</string>
   <string name="about_version">Версия %1$s</string>
   <string name="actionbar_search">Търсене в тази папка</string>
