--- a/owncloudApp/src/main/res/values-ca/strings.xml
+++ b/owncloudApp/src/main/res/values-ca/strings.xml
@@ -1,5 +1,9 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <!--GLOBAL-->
+  <string name="global_name">Nom</string>
+  <string name="global_date">Data</string>
+  <string name="global_size">Mida</string>
   <string name="about_android">1%1$s Per Android</string>
   <string name="about_version">Versió 1%1$s</string>
   <string name="actionbar_search">Buscar en aquesta carpeta</string>
