--- a/owncloudApp/src/main/res/values-cs-rCZ/strings.xml
+++ b/owncloudApp/src/main/res/values-cs-rCZ/strings.xml
@@ -1,5 +1,9 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <!--GLOBAL-->
+  <string name="global_name">Název</string>
+  <string name="global_date">Datum</string>
+  <string name="global_size">Velikost</string>
   <string name="about_android">%1$s pro Android</string>
   <string name="about_version">Verze %1$s</string>
   <string name="actionbar_search">Hledat v tomto adresáři</string>
