--- a/owncloudApp/src/main/res/values-de/strings.xml
+++ b/owncloudApp/src/main/res/values-de/strings.xml
@@ -1,5 +1,9 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <!--GLOBAL-->
+  <string name="global_name">Name</string>
+  <string name="global_date">Datum</string>
+  <string name="global_size">Größe</string>
   <string name="about_android">%1$s für Android</string>
   <string name="about_version">Version %1$s</string>
   <string name="actionbar_search">Diesen Ordner durchsuchen</string>
