--- a/owncloudApp/src/main/res/values-et-rEE/strings.xml
+++ b/owncloudApp/src/main/res/values-et-rEE/strings.xml
@@ -1,5 +1,9 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <!--GLOBAL-->
+  <string name="global_name">Nimi</string>
+  <string name="global_date">Kuupäev</string>
+  <string name="global_size">Suurus</string>
   <string name="about_android">%1$s Androidile</string>
   <string name="about_version">Versioon %1$s</string>
   <string name="actionbar_search">Otsi sellest kaustast</string>
