--- a/owncloudApp/src/main/res/values-hu-rHU/strings.xml
+++ b/owncloudApp/src/main/res/values-hu-rHU/strings.xml
@@ -1,5 +1,9 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <!--GLOBAL-->
+  <string name="global_name">Név</string>
+  <string name="global_date">Dátum</string>
+  <string name="global_size">Méret</string>
   <string name="about_android">%1$s Android</string>
   <string name="about_version">%1$s verzió</string>
   <string name="actionbar_search">Keresés ebben a mappában</string>
