--- a/owncloudApp/src/main/res/values-it/strings.xml
+++ b/owncloudApp/src/main/res/values-it/strings.xml
@@ -1,5 +1,9 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <!--GLOBAL-->
+  <string name="global_name">Nome</string>
+  <string name="global_date">Data</string>
+  <string name="global_size">Dimensione</string>
   <string name="about_android">%1$s per Android</string>
   <string name="about_version">Versione %1$s</string>
   <string name="actionbar_search">Cerca questa cartella</string>
