--- a/owncloudApp/src/main/res/values-sq/strings.xml
+++ b/owncloudApp/src/main/res/values-sq/strings.xml
@@ -1,5 +1,9 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <!--GLOBAL-->
+  <string name="global_name">Emër</string>
+  <string name="global_date">Datë</string>
+  <string name="global_size">Madhësi</string>
   <string name="about_android">%1$s për Android</string>
   <string name="about_version">Version %1$s</string>
   <string name="actionbar_search">Kërko në këtë dosje</string>
