--- a/owncloudApp/src/main/res/values-tr/strings.xml
+++ b/owncloudApp/src/main/res/values-tr/strings.xml
@@ -1,5 +1,9 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <!--GLOBAL-->
+  <string name="global_name">Ad</string>
+  <string name="global_date">Tarih</string>
+  <string name="global_size">Boyut</string>
   <string name="about_android">Android için %1$s</string>
   <string name="about_version">Sürüm %1$s</string>
   <string name="actionbar_search">Bu klasörü ara</string>
