--- a/owncloudApp/src/main/res/values-zh-rCN/strings.xml
+++ b/owncloudApp/src/main/res/values-zh-rCN/strings.xml
@@ -1,5 +1,9 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <!--GLOBAL-->
+  <string name="global_name">名称</string>
+  <string name="global_date">日期</string>
+  <string name="global_size">大小</string>
   <string name="about_android">%1$s Android版</string>
   <string name="about_version">版本 %1$s</string>
   <string name="actionbar_search">在此文件夹搜索</string>
