--- a/owncloudApp/src/main/res/values-zh-rTW/strings.xml
+++ b/owncloudApp/src/main/res/values-zh-rTW/strings.xml
@@ -1,5 +1,9 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <!--GLOBAL-->
+  <string name="global_name">名稱</string>
+  <string name="global_date">日期</string>
+  <string name="global_size">大小</string>
   <string name="about_android">%1$s用於安卓系統</string>
   <string name="about_version">版本%1$s</string>
   <string name="actionbar_search">搜尋這個目錄</string>
