[tx] updated from transifex

--- a/owncloudApp/src/main/res/values-he/strings.xml
+++ b/owncloudApp/src/main/res/values-he/strings.xml
@@ -561,4 +561,5 @@
   <string name="supports_oauth2_error">לא ניתן היה לדעת אם OAuth2 נתמך</string>
   <string name="get_base_url_error">לא ניתן היה לדעת את נתיב הבסיס של השרת</string>
   <string name="prefs_http_logs">תיעוד בקשות ותגובות HTTP</string>
+  <string name="prefs_logs_summary">לוגים עלולים להכיל מידע רגיש. שיתוף לוגים עם אחרים הנו באחריות הבלעדית של המשתמש</string>
 </resources>
