[tx] updated from transifex

--- a/owncloudApp/src/main/res/values-de-rDE/strings.xml
+++ b/owncloudApp/src/main/res/values-de-rDE/strings.xml
@@ -400,6 +400,7 @@
   <string name="drawer_manage_accounts">Konten verwalten</string>
   <string name="auth_redirect_non_secure_connection_title">Die gesicherte Verbindung wird auf eine unsichere Route weitergeleitet.</string>
   <string name="actionbar_logger">Protokolle</string>
+  <string name="log_open_logs_view">Log-Ansicht öffnen</string>
   <string name="log_send_history_button">Verlauf senden</string>
   <string name="log_send_no_mail_app">Keine App zum Versenden der Meldungen gefunden. Bitte installieren Sie die Mail-App!</string>
   <string name="log_send_mail_subject">%1$s Android-App Meldungen</string>
@@ -557,4 +558,6 @@
   <string name="common_not_found">es wurde nicht gefunden</string>
   <string name="supports_oauth2_error">Es war nicht möglich, herauszufinden ob OAuth2 vom Server unterstützt wird</string>
   <string name="get_base_url_error">Es war nicht möglich die Serveradresse zu ermitteln.</string>
+  <string name="prefs_http_logs">HTTP-Anfragen und Antworten protokollieren</string>
+  <string name="prefs_logs_summary">Protokolle können sensible Informationen enthalten. Die gemeinsame Nutzung von Protokollen liegt in der alleinigen Verantwortung des Benutzers.</string>
 </resources>
