--- a/owncloudApp/src/main/res/values-ar/strings.xml
+++ b/owncloudApp/src/main/res/values-ar/strings.xml
@@ -398,6 +398,7 @@
   <string name="drawer_manage_accounts">إدارة الحسابات</string>
   <string name="auth_redirect_non_secure_connection_title">يُعاد توجيه الاتصال الآمن خلال مسار غير آمن.</string>
   <string name="actionbar_logger">السجلات</string>
+  <string name="log_open_logs_view">افتح عرض السجلات</string>
   <string name="log_send_history_button">إرسال المحفوظات</string>
   <string name="log_send_no_mail_app">لم يتم العثور على تطبيق لإرسال السجلات. يُرجى تثبيت تطبيق بريد.</string>
   <string name="log_send_mail_subject">%1$s سجلات تطبيقات الأندرويد</string>
@@ -558,4 +559,6 @@
   <string name="common_not_found">لم يتم العثور عليه</string>
   <string name="supports_oauth2_error">لا يمكن معرفة ما إذا كان OAuth2 مدعومًا أم لا</string>
   <string name="get_base_url_error">لا يمكن معرفة عنوان URL قاعدة الخادم</string>
+  <string name="prefs_http_logs"> تسجيل طلبات واستجابات بروتوكول HTTP </string>
+  <string name="prefs_logs_summary">قد تحتوي السجلات على معلومات حساسة. تعتبر مشاركة السجلات مع الآخرين مسؤولية المستخدم وحده</string>
 </resources>
